9376 sendmail: this statement may fall through Reviewed by: Andy Fiddaman <af@citrus-it.net> Reviewed by: Hans Rosenfeld <rosenfeld@grumpf.hope-2000.org> Approved by: Robert Mustacchi <rm@joyent.com>