usr/src/cmd/sendmail/aux/mailstats.c
@@ -12,8 +12,6 @@
  *
  */
 
-#pragma ident	"%Z%%M%	%I%	%E% SMI"
-
 #include <sm/gen.h>
 
 SM_IDSTR(copyright,
@@ -182,6 +180,7 @@ main(argc, argv)
 			}
 			if (sfile == NULL)
 				sfile = sfilebuf;
+			/* FALLTHROUGH */
 
 		  default:
 			continue;
